fixed scaling on mobile

--- a/src/pages/frontpage/frontpage.scss
+++ b/src/pages/frontpage/frontpage.scss
@@ -102,12 +102,11 @@
     width: 100%;
   }
 
-  input:focus, select:focus {
+  input:focus,
+  select:focus {
     background-color: #c5bd8f;
   }
 }
-
-
 
 .searchLane {
   display: flex;
